# routes/auth.routes.js
@@ -5,11 +5,14 @@ const {
   signin,
   logout,
   singleUser,
-} = require("../controllers/user.controllers");
+  userProfile,
+} = require("../controllers/auth.controllers");
+const {isAuthenticated} = require("../middlewares/auth");
 
 router.post("/signup", signup);
 router.post("/signin", signin);
 router.get("/logout", logout);
+router.get("/getme", isAuthenticated, userProfile);
 router.get("/user/:id", singleUser);
 
 module.exports = router;
